# PlotPointe-GAT-Recommendation

./: .gitignore  .pre-commit-config.yaml  DATA_BASELINE.md  PHASE0_REPORT.md  PHASES.md  QUICKSTART_STEP10.md  README.md  SYSTEM_OVERVIEW.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  container.yml  serving-container.yml  terraform.yml
bigquery/: setup_bq.sh
bigquery/schemas/: drift.hourly.json  recsys_logs.feedback.json  recsys_logs.requests.json
contracts/: data_contracts.md
data/pipelines/: stage_amazon_electronics.py
data/staging/amazon_electronics/: interactions_rejects.parquet
data/validation/: validate_amazon_electronics.py
docker/: Dockerfile  serving.Dockerfile
docs/: ARCHITECTURE.md  DATA_MANIFESTS.md  DOCUMENTATION_COMPLETE.md  INDEX.md  INFRA_AS_CODE.md  OBSERVABILITY_AND_GATES.md  PARALLELIZATION_STRATEGY.md  PHASE5_ABLATIONS_REPORT.md  PHASE5_GAT_DESIGN.md  PIPELINE_STATUS.md  PROGRESS.md  PROJECT_STATUS_AND_NEXT_STEPS.md  PROJECT_SUMMARY.md  SERVING_PACKAGING.md  SKILLS_SHOWCASE.md  embeddings_testing_report.md  profiles.md  readiness_report_final.md  step10_embeddings_plan.md  step10_execution_summary.md
docs/container_specs/: TRAINING_IMAGE.md  recsys-api.md  recsys-train.md
embeddings/: embed_image.py  embed_text.py  fuse_modal.py  smoke_test_gpu.py
experiments/: README.md  vertex_log_example.py
graphs/: build_ii_knn.py  build_ui_edges.py
manifests/: registry.json
manifests/features/: amazon_electronics_v1.json
plotpointe/: __init__.py  feature_registry.py
plotpointe/embeddings/: __init__.py  cli.py
plotpointe/utils/: random.py  structured_log.py
scripts/: auto_continue_pipeline.sh  bootstrap_gcp.sh  build_interacted_text_subset.py  launch_gat.sh  launch_gat_ablations.sh  launch_lightgcn_central.sh  launch_lightgcn_race.sh  migrate_artifacts_to_v1.sh  monitor_embeddings.sh  parallel_image_embeddings.sh  parallel_pipeline.sh  run_embeddings_pipeline.sh  run_pipeline_v2.sh  setup_dev_env.sh  setup_pubsub.sh  setup_service_accounts.sh  test_embed_text_dryrun.sh  test_embeddings_local.sh  test_pubsub_landing.sh  train_gat_custom.py  train_gat_pyg.py  train_lightgcn.py  vertex_smoke_test.sh
serving/: app.py  runtime.py
terraform/: example.auto.tfvars  main.tf  variables.tf  versions.tf
tests/: conftest.py  test_determinism.py  test_feature_registry.py  test_promotion_gate.py  test_serving_runtime.py
tmp/: fb_test.json  req_test.json
tools/: export_item_embeddings.py  manifest_validate.py  promotion_gate.py
vertex/configs/: build_ii_knn_fused.yaml  build_ii_knn_fused_interacted.yaml  build_ii_knn_fused_v2.yaml  build_ii_knn_text.yaml  build_ii_knn_text_interacted.yaml  build_ii_knn_text_v2.yaml  build_interacted_fused_subset.yaml  build_interacted_text_subset.yaml  build_ui_edges.yaml  build_ui_edges_v2.yaml  embed_image.yaml  embed_image_l4.yaml  embed_image_reliable.yaml  embed_image_t4_fixed.yaml  embed_image_t4_v2.yaml  embed_text.yaml  embed_text_v2.yaml  export_item_embeddings.yaml  fuse_modal.yaml  fuse_modal_l4.yaml  fuse_modal_v2.yaml  smoke_l4.yaml  smoke_t4.yaml  smoke_test_gpu.yaml  train_gat_custom_l4.yaml  train_gat_custom_l4_bce.yaml  train_gat_custom_l4_image.yaml  train_gat_custom_l4_layers1.yaml  train_gat_custom_l4_txt.yaml  train_gat_pyg_l4.yaml  train_gat_pyg_l4_bce.yaml  train_gat_pyg_l4_heads2.yaml  train_gat_pyg_l4_image.yaml  train_gat_pyg_l4_layers1.yaml  train_gat_pyg_l4_txt.yaml  train_lightgcn_l4.yaml  train_lightgcn_l4_128.yaml  train_lightgcn_l4_128_central.yaml  train_lightgcn_l4_central.yaml
vertex/profiles/: gpu-t4-preemptible.yaml
